tooling/nargo_cli/tests/snapshots/execution_success/static_assert_empty_loop/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
foo
